# internal/models/models.go
@@ -4,12 +4,14 @@ import "gorm.io/gorm"
 
 type Task struct {
 	gorm.Model
-	Task   string `json:"task"`    // Наш сервер будет ожидать json c полем text
-	IsDone bool   `json:"is_done"` // В GO используем CamelCase, в Json - snake
+	Task   string `json:"task"`
+	IsDone bool   `json:"is_done"`
+	UserId uint   `json:"user_id"`
 }
 
 type User struct {
 	gorm.Model
 	Email    string
 	Password string
+	Tasks    []Task
 }
